FIX Modify z-index values so that TinyMCE is working properly in full view
TinyMCE's z-index is set to 100. Therefore the values for values for the content panel and menu were lowered. The cms-content-actions was lowered correspondingly to ensure all borders are displayed correctly.

--- a/client/src/components/Menu/Menu.scss
+++ b/client/src/components/Menu/Menu.scss
@@ -44,7 +44,7 @@
       // Using important because JavaScript is overriding this value
       width: $cms-menu-width-collapsed !important; // sass-lint:disable-line no-important
       cursor: auto;
-      z-index: 1000;
+      z-index: 50;
 
       .cms-panel-header {
         width: 30px;
