--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -87,7 +87,7 @@ $zindex-popover: 1060;
 $zindex-modal-bg: 1040;
 $zindex-modal: 1050;
 $zindex-cms-content-header: 60;
-$zindex-cms-content-actions: 999;
+$zindex-cms-content-actions: 79;
 $zindex-menu: $zindex-cms-content-actions + 1;
 
 
